# OpenGL_BH

./: .gitignore  CMakeLists.txt  README.md  conan.cmake  imgui.ini
shader/: blackhole_main.frag
src/: main.cpp  render.cpp  render.h  shader.cpp  shader.h  texture.h
